<resources>
    <string name="app_name">Customer Application</string>
    <string name="order_info">Order Information:</string>
    <string name="bt_see_basket">See all products</string>
    <string name="tv_price">Total Price: </string>
    <string name="tv_sel_voucher"> Select Voucher id: </string>
    <string name="spinner">None</string>
    <string name="spinner_description">Select the id of the voucher you want to use</string>
    <string name="tv_proceed_payment">Proceed to payment:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cb_discount_accu">Use discount accumulated</string>
    <string name="app_bar_name">Acme Electronic Supermarket</string>
    <string name="bt_wel_order">Order products</string>
    <string name="welcome_str">Welcome Username</string>
    <string name="see_vouchers">Retrieve vouchers</string>
    <string name="see_transactions">See past transactions</string>
    <string name="logout">Logout</string>
    <string name="checkout">Checkout</string>
    <string name="add_product">Add Product</string>
    <string name="empty_state_text">No Past Transactions</string>
    <string name="nickname">Nickname</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="new_user">New user ?</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="enter_your_card_number">Enter your card number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="payment_information">Payment information</string>
    <string name="card_number">Card number</string>
    <string name="expiration_month">Expiration month</string>
    <string name="expiration_year">Expiration year</string>
    <string name="security_code">Security code</string>
    <string name="enter_your_card_expiration_month">Enter your card expiration month</string>
    <string name="enter_your_card_expiration_year">Enter your card expiration year</string>
    <string name="enter_your_credit_card_number">Enter your credit card number</string>
    <string name="enter_your_card_security_code">Enter your card security code</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="your_shopping_basket_is_empty">Your shopping basket is empty</string>
    <string name="checkout_qr_code">Checkout QR Code</string>
    <string name="give_this_qr_code_to_the_terminal">Give this QR code to the terminal</string>
    <string name="done">done</string>
    <string name="total_price">Total price :</string>
    <string name="_100_00">100.00</string>
    <string name="euro">€</string>
    <string name="voucher_id_to_use_optional">Voucher ID to use (optional):</string>
    <string name="voucher_id">Voucher ID</string>
    <string name="use_accumulated_discount">Use accumulated discount ? </string>
    <string name="confirm">Confirm</string>
    <string name="vouchers">Vouchers</string>
    <string name="no_vouchers_available">No vouchers available</string>
    <string name="tomato">Tomato</string>
    <string name="quantity">Quantity:</string>
    <string name="_2">2</string>
    <string name="multiply">x</string>
    <string name="_2_99">2.99 €</string>
    <string name="equal">=</string>
    <string name="_5_98">5.98 €</string>
    <string name="delete">delete</string>
</resources>