<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/shopping_basket_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tomato"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quantity" />

        <EditText
            android:id="@+id/shopping_basket_product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_2"
            android:inputType="number"
            android:maxLength="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiply" />

        <TextView
            android:id="@+id/shopping_basket_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_2_99" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/equal" />

        <TextView
            android:id="@+id/shopping_basket_product_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_5_98"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/shopping_basket_product_bt_delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/baseline_delete_24"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/blue"
            android:contentDescription="@string/delete" />

    </LinearLayout>

</androidx.cardview.widget.CardView>

